--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #BLoC
+  flutter_bloc: ^8.1.3
+
+  #HTTP
+  http: ^1.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
