Added adaptive layout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   #HTTP
   http: ^1.1.0
 
+  #Device type
+  sizer: ^2.0.15
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
